licenseID still not setting properly line 165 of login form

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "./start_fe.sh",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "generate-jwt": "node scripts/generate-jwt.js",
