--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@reduxjs/toolkit": "^2.4.0",
+    "@supabase/supabase-js": "^2.49.4",
     "buffer": "^6.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
