--- a/package.json
+++ b/package.json
@@ -6,29 +6,12 @@
   "scripts": {
     "start": "./start_fe.sh",
     "test": "vitest",
-    "test:ui": "vitest --ui",
     "generate-jwt": "node scripts/generate-jwt.js",
     "frontend-auth-init": "node src/components/Auth/tests/frontendAuth.init.js",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "test:email": "node src/components/OrganizationDetails/tests/fetchOrganizationEmail.test.js",
-    "test:address": "node src/components/OrganizationDetails/tests/fetchOrganizationAddress.test.js",
-    "test:phone": "node src/components/OrganizationDetails/tests/fetchOrganizationPhone.test.js",
-    "test:record-details": "node src/components/OrganizationDetails/tests/fetchOrganizationRecordDetails.test.js",
-    "test:sellable": "node src/components/OrganizationDetails/tests/fetchOrganizationSellable.test.js",
-    "test:party": "node src/components/OrganizationDetails/tests/fetchOrganizationParty.test.js",
-    "test:modules-selected": "node src/components/OrganizationDetails/tests/fetchOrganizationModulesSelected.test.js",
-    "test:license": "node src/components/OrganizationDetails/tests/fetchOrganizationLicense.test.js",
-    "test:license-redux": "node src/components/OrganizationDetails/tests/organizationLicenseSlice.test.js",
-    "test:fetch-license": "node src/components/LicenseList/tests/fetchLicense.test.js",
-    "test:module-selected": "node src/components/LicenseList/tests/moduleSelected.test.js",
-    "test:api-keys": "node src/components/LicenseList/tests/apiKeys.test.js",
-    "test:user-auth": "node src/components/Auth/tests/userAuth.test.js",
-    "test:user-registration": "node src/components/Auth/tests/userRegistration.test.js",
-    "test:health-auth": "node src/components/Auth/tests/healthAuth.test.js",
-    "test:llm": "node src/components/Chat/tests/llmChat.test.js"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
